...
                    app:startIconDrawable="@drawable/ic_warning_circle"
                    app:startIconTint="@color/mtrl_textinput_empty_field_stroke_color"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <AutoCompleteTextView
                        android:id="@+id/news_item_category_text_auto_complete_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        tools:ignore="LabelFor" />
                </com.google.android.material.textfield.TextInputLayout>

...
                    app:endIconMode="none"
                    app:endIconTint="@color/mtrl_textinput_empty_field_stroke_color"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/news_item_category_text_input_layout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/news_item_title_text_input_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
...
                    app:endIconTint="@color/mtrl_textinput_empty_field_stroke_color"
                    app:layout_constraintEnd_toStartOf="@id/news_item_publish_time_text_input_layout"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/news_item_title_text_input_layout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/news_item_publish_date_text_input_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="false" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
...
                    app:endIconTint="@color/mtrl_textinput_empty_field_stroke_color"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/news_item_create_date_text_input_layout"
                    app:layout_constraintTop_toBottomOf="@id/news_item_title_text_input_layout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/news_item_publish_time_text_input_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="false" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
...
                    app:endIconMode="none"
                    app:endIconTint="@color/mtrl_textinput_empty_field_stroke_color"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/news_item_create_date_text_input_layout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/news_item_description_text_input_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switcher"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/news_item_active"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/news_item_description_text_input_layout" />

                <Button
                    android:id="@+id/save_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:contentDescription="@string/save"
                    android:text="@string/save"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/switcher" />

                <Button
                    android:id="@+id/cancel_button"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:contentDescription="@string/cancel"
                    android:text="@string/cancel"
...
